add divs for five day forecast

--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <h3>Search For A City:</h3>
         <form id="city-search">
           <label class="form-label" for="city-name">City, State</label>
-          <input name="city-name" id="city-name" type="text" class-="form-input">
+          <input name="city-name" id="city-name" type="text" class="form-input">
           <button type="submit" class="btn btn-secondary">Search</button>
         </form>
       </div>
@@ -54,12 +54,43 @@
 
       <h3 class="title">Five Day Forecast</h3>
       <div id="five-day-forecast">
-        
-        
+        <div id="dayOne">
+          <p id="one-weather-icon"></p>
+          <p id="one-temp"> </p>
+          <p id="one-humidity"> </p>
+          <p id="one-wind"> </p>
+          <p id="one-uv-index"> </p>
+        </div>
+        <div id="dayTwo">
+          <p id="two-weather-icon"></p>
+          <p id="two-temp"> </p>
+          <p id="two-humidity"> </p>
+          <p id="two-wind"> </p>
+          <p id="two-uv-index"> </p>
+        </div>
+        <div id="dayThree">
+          <p id="three-weather-icon"></p>
+          <p id="three-temp"> </p>
+          <p id="three-humidity"> </p>
+          <p id="three-wind"> </p>
+          <p id="three-uv-index"> </p>
+        </div>
+        <div id="dayFour">
+          <p id="four-weather-icon"></p>
+          <p id="four-temp"> </p>
+          <p id="four-humidity"> </p>
+          <p id="four-wind"> </p>
+          <p id="four-uv-index"> </p>
+        </div>
+        <div id="dayFive">
+          <p id="five-weather-icon"></p>
+          <p id="five-temp"> </p>
+          <p id="five-humidity"> </p>
+          <p id="five-wind"> </p>
+          <p id="five-uv-index"> </p>
+        </div>
       </div>
-
     </div>
-
   </main>
 
   
